[tool.poetry]
name = "solar"
version = "0.1.0"
description = "CLI app for Solr"
authors = ["Andrey S. <andrewsapw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
orjson = "^3.8.7"
click = "^8.1.3"
more-itertools = "^9.1.0"
rich = "^13.3.2"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solar = "solar:cli"
