[tool.poetry]
name = "solar-cli"
version = "0.1.0"
description = "CLI app for Solr"
authors = ["Andrey S. <andrewsapw@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "solar" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.4"
orjson = "^3.8.7"
click = "^8.1.3"
more-itertools = "^9.1.0"
rich = "^13.3.2"
pydantic = "^1.10.6"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solar = "solar.cli:cli"
